<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Light_gray"
    tools:context=".activity.SetActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_set"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/used"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/dp_15"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/dp_15">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_20"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ID"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/calibri"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@null"
                android:imeOptions="actionSearch"
                android:layout_toRightOf="@id/tv_id"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:fontFamily="@font/calibri"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_30"
                android:text="@string/save"
                android:background="@drawable/button_round"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_20"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translation_detailed"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/calibri"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_10"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_20"
            >
            <TextView
                android:id="@+id/tv_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_copy"
                android:textSize="@dimen/sp_15"
                android:layout_centerVertical="true"
                android:fontFamily="@font/calibri"
                android:textColor="@color/black"
                />
            <ImageView
                android:id="@+id/iv_why"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:src="@mipmap/why"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_copy"
                android:layout_marginLeft="@dimen/sp_10"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_10"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_20"
            >
            <TextView
                android:id="@+id/tv_quick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick"
                android:textSize="@dimen/sp_15"
                android:layout_centerVertical="true"
                android:fontFamily="@font/calibri"
                android:textColor="@color/black"
                />
            <ImageView
                android:id="@+id/iv_quick"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:src="@mipmap/why"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_quick"
                android:layout_marginLeft="@dimen/sp_10"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_quick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_10"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_20"
            >
            <TextView
                android:id="@+id/tv_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_read"
                android:textSize="@dimen/sp_15"
                android:layout_centerVertical="true"
                android:fontFamily="@font/calibri"
                android:textColor="@color/black"
                />
            <ImageView
                android:id="@+id/iv_read"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:src="@mipmap/danger"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_read"
                android:layout_marginLeft="@dimen/sp_10"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_10"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />
    </LinearLayout>

</LinearLayout>